<resources>
    <string name="app_name">WorkWithRoom</string>
    <string name="panel">ПАНЕЛЬ</string>
    <string name="catalog_categories">КФТЕГОРИИ</string>
    <string name="catalog_products">ТОВАРЫ</string>
    <string name="catalog_clothes">ОДЕЖДА</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addCategory">ДОБАВИТЬ КАТЕГОРИЮ</string>
    <string name="shoes">ОБУВЬ</string>
    <string name="accessories">АКСЕССУАРЫ</string>
    <string name="addProduct">ДОБАВИТЬ ТОВАР</string>
    <string name="labelEnterNameProduct">Введите название товара</string>
    <string name="labelEnterNumberCategory">Введите номер категории</string>
    <string name="labelEnterPriceProduct">Введите цену товара</string>
    <string name="deleteAllCategories">УДАЛИТЬ ВСЕ КАТЕГОРИИ</string>
    <string name="editCategory">РУДАКТИРОВАНИЕ КАТЕГОРИИ</string>
    <string name="labelEnterCategory">Ввкдите название категории</string>
    <string name="deleteAllProducts">УДАЛИТЬ ВСЕ ТОВАРЫ</string>
    <string name="editProduct">РЕДАКТИРОВАНИЕ ТОВАРА</string>
</resources>