<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/panelItemBottomNav"
        android:title="@string/panel"
        android:icon="@drawable/edit_white"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/catalogCategoriesItemBottomNav"
        android:title="@string/catalog_categories"
        android:icon="@drawable/catalog_categories"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/catalogProductsItemBottomNav"
        android:title="@string/catalog_products"
        android:icon="@drawable/catalog_products"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/catalogClothesItemBottomNav"
        android:title="@string/catalog_clothes"
        android:icon="@drawable/catalog_clothes"
        app:showAsAction="ifRoom"/>

</menu>