<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".tabs.products.PanelEditProduct">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerEditProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/editProduct"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectionEditNameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/labelEnterNameProduct"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/background"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="4dp"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/holo_red_light"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headerEditProduct"
                app:startIconDrawable="@drawable/catalog_categories"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNameProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:textCursorDrawable="@drawable/cursor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectionEditCategoryProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/labelEnterNumberCategory"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/background"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="4dp"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/holo_red_light"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sectionEditNameProduct"
                app:startIconDrawable="@drawable/catalog_products"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCategoryProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/cursor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectionEditPriceProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/labelEnterPriceProduct"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/background"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="4dp"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/holo_red_light"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sectionEditCategoryProduct"
                app:startIconDrawable="@drawable/catalog_products"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPriceProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/cursor" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/sectionResEditProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/sectionEditPriceProduct">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resEditNameProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resEditCategoryProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resEditPriceProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonEditProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:text="@string/editProduct"
                android:textColor="@color/orange"
                app:layout_constraintTop_toBottomOf="@id/sectionResEditProduct" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>